--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,7 +4,7 @@ body {
   justify-content: center;
   min-height: 100vh;
   background-color: #e3f2fd;
-  color: #fff;
+  color: #ffffff;
 }
 
 .container {
@@ -37,7 +37,7 @@ header .column span {
 }
 
 .volume-slider input {
-  accent-color: #fff;
+  accent-color: #ffffff;
 }
 
 .keys-check input {
@@ -70,10 +70,69 @@ header .column span {
 /* : = propriedade do elemento, :: = pseudo-elemento */
 .keys-check input:checked::before {
   left: 2.1rem;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 .piano-keys {
   display: flex;
   margin-top: 40px;
+}
+
+.piano-keys .key {
+  cursor: pointer;
+  user-select: none;
+  list-style: none;
+  color: #a2a2a2;
+  position: relative;
+  text-transform: uppercase;
+}
+
+.piano-keys .white {
+  width: 70px;
+  height: 230px;
+  border: 1px solid #000000;
+  border-radius: 8px;
+  background: linear-gradient(
+    #ffffff 96%, #eeeeee 4%
+  );
+}
+
+.piano-keys .black {
+  width: 44px;
+  height: 140px;
+
+  /* cria outra dimensão e impede o conflito com outros elementos*/
+  z-index: 2;
+  margin: 0 -22px 0 -22px;
+  border: 1px solid #000000;
+  border-radius: 0 0 5px 5px;
+  background: linear-gradient(
+    #333333, #000000
+  );
+}
+
+/* posição das letras nas teclas */
+.piano-keys span {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  text-align: center;
+  font-size: 1.13rem;
+}
+
+/* efeito de sombreado ao clicar nas teclas */
+.piano-keys .white:active {
+  box-shadow: inset -5px 5px 20px
+  #00000033;
+  background: linear-gradient(
+    to bottom #ffffff 0%, #eeeeee 100%
+  );
+}
+
+.piano-keys .black:active {
+  box-shadow: inset -5px 5px 20px
+  #ffffff1a;
+  background: linear-gradient(
+    to bottom #000000, #434343
+  );
 }
