--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -121,7 +121,7 @@ header .column span {
 }
 
 /* efeito de sombreado ao clicar nas teclas */
-.piano-keys .white:active {
+.piano-keys .white.active {
   box-shadow: inset -5px 5px 20px
   #00000033;
   background: linear-gradient(
@@ -129,7 +129,7 @@ header .column span {
   );
 }
 
-.piano-keys .black:active {
+.piano-keys .black.active {
   box-shadow: inset -5px 5px 20px
   #ffffff1a;
   background: linear-gradient(
