feat: adiciona funcionalidade para o botão teclas

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -136,3 +136,8 @@ header .column span {
     to bottom #000000, #434343
   );
 }
+
+/* esconde as letras das teclas */
+.piano-keys .key.hide span {
+  display: none;
+}
